--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
     </div>
   </template>
 
-  <script src="js/main.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/popup.js"></script>
+  <script src="js/template.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/validate.js"></script>
+
 </body>
 </html>
