--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
   <script src="js/popup.js"></script>
   <script src="js/template.js"></script>
   <script src="js/pin.js"></script>
+  <script src="js/drag-and-drop.js"></script>
   <script src="js/map.js"></script>
   <script src="js/validate.js"></script>
 
