--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 
   <script src="js/util.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/popup.js"></script>
   <script src="js/template.js"></script>
   <script src="js/drag-and-drop.js"></script>
