выполняет задание "Перламутровые пуговицы"

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
   <script src="js/backend.js"></script>
   <script src="js/popup.js"></script>
   <script src="js/template.js"></script>
+  <script src="js/filtration.js"></script>
   <script src="js/drag-and-drop.js"></script>
   <script src="js/map.js"></script>
   <script src="js/validate.js"></script>
