выполняет задание "Фото на память"

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
               <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
-            <div class="ad-form__photo"></div>
+            <div class="ad-form__photo">
+              <img src="" alt="" width="70" height="70">
+            </div>
           </div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit">
@@ -256,6 +258,7 @@
   <script src="js/drag-and-drop.js"></script>
   <script src="js/map.js"></script>
   <script src="js/validate.js"></script>
+  <script src="js/photo.js"></script>
 
 </body>
 </html>
